styles.css
* {
  margin: 0;
  padding: 0;
  font-family: "BioRhyme", sans-serif;
}

#main-wrapper {
  display: grid;
  grid-template-rows: auto 1fr;
  padding: 20px 100px;
  background-color: #a5c8e4;
}

#header,
#logo-wrapper {
  min-height: 8vh;
  display: flex;
  align-items: center;
  gap: 10px;
  justify-content: space-between;
}

#content-wrapper {
  min-height: 90vh;
}

#content-toolbar {
  display: flex;
  justify-content: end;
  gap: 20px;
  margin: 20px;
}

#login,
.toolbar-btn {
  background-color: #e4c1a5;
  border: 1px solid black;
  border-radius: 10px;
  height: 45px;
  width: 45px;
  padding: 5px;
  box-shadow: 2px 2px black;
  display: flex;
  align-items: center;
  justify-content: center;
}

#login {
  background-color: #c0eccc;
  font-weight: bold;
  width: 80px;
  height: 35px;
}

button {
  cursor: pointer;
}

button:active {
  background-color: #dca273;
  box-shadow: 0 2px #666;
  transform: translateY(4px);
}

.toolbar-icon {
  height: 100%;
  width: 100%;
}

#sort-icon {
  height: 65%;
  width: 65%;
}
/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 40%; /* Could be more or less, depending on screen size */
}
.modal-content input {
  width: 100%;
  clear: both;
}
.modal-content div {
  margin-top: 10px;
}

#status-question {
  display: inline-block;
}
#status {
  width: 20px;
}

#add-btn,
#clear-btn {
  padding: 5px;
}
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

/* Card Container */
#card-container {
  display: grid;
  gap: 20px;
  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
  grid-auto-rows: 250px;
  justify-content: center;
}

.card {
  background-color: #e4c1a5;
  text-align: center;
  padding: 15px 0;
  overflow: auto;
  display: flex;
  flex-direction: column;
  border: 1px solid black;
  border-radius: 10px;
  box-shadow: 5px 5px black;
}

.book-title {
  font-size: 1.5rem;
}

.book-author {
  font-size: 1.1rem;
}

.pages,
.date-added {
  font-size: 1rem;
}

.card p {
  margin-bottom: 5px;
}

.card-btns {
  margin-top: auto;
  margin-left: auto;
  margin-right: 30px;
  display: flex;
  justify-content: end;
  gap: 10px;
  align-items: center;
}

.read-switch {
  display: flex;
  align-items: center;
  gap: 5px;
}

.read-switch p {
  margin: 0;
}
/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 43px;
  height: 24px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 18px;
  width: 18px;
  left: 4px;
  bottom: 3px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: #79f670;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196f3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(calc(83%));
  -ms-transform: translateX(calc(83%));
  transform: translateX(calc(83%));
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.card-btn {
  background: none;
  border: none;
}

.hidden {
  display: none;
}

/* Dropdown content */

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 110px;
  min-height: 40px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.show {
  display: flex;
  flex-direction: column;
  text-align: start;
}

.dropdown-btn {
  height: 35px;
}

